Fix: fixed carousel image overlaping description

--- a/static/sass/_base.scss
+++ b/static/sass/_base.scss
@@ -352,6 +352,11 @@ a.category-badge > span.badge:hover {
   opacity: 1 !important;
 }
 
+.carousel-item {
+    width: 80%;
+    margin-left: 10%;
+}
+
 .cookie-banner_inner {
     position: fixed;
     width: 250px;
